# glam

./: Cargo.toml  README.md  glam_plots.py  partial_residual_plot.py  plots.py  pyproject.toml  setup.py  stderr.txt  test.py
hit_ratio/: Untitled.ipynb  pyproject.toml
mypy-report/: index.html
mypy-report/html/: glam_plots.py.html  partial_residual_plot.py.html
mypy-report/html/src/glam/: __init__.py.html  duck_db.py.html  plots.py.html  test.py.html
old_glm/: feature_tester.py  residual_calculator.py
old_glm/oneway/: __init__.py
python/glam/: __init__.py  test.py
python/glam/analysis/: base_glm_analysis.py  binomial_glm_analysis.py
python/glam/catboost_info/: test_error.tsv
python/glam/glam_plots/: utils.py
python/glam/src/: model_analysis.py
python/glam/src/data/: base_model_data.py  default_model_data.py
python/glam/src/enums/: model_type.py
python/glam/src/fitted_model/: __init__.py  base_fitted_model.py
python/glam/tests/: test_plots.py
src/: lib.rs
src/glam/: __init__.py  cancer.db  cancer.parquet  dev.ipynb  duck_db.py  plots.py  test.py
src/glam/analysis/: __init__.py  base_analysis.py  base_glm_analysis.py  binary_glm_analysis.py  binomial_glm_analysis.py  catboost_analysis.py
src/glam/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/glam/catboost_info/learn/: events.out.tfevents
src/glam/catboost_info/test/: events.out.tfevents
src/glam/glam_plots/: __init__.py  categorical_plot.py  marginal_effect_distro.py  numeric_plot.py  utils.py
src/glam/old_glm/: __init__.py  model_plotter.py  residual_plotter.py
src/glam/old_glm/old/: data.py
src/glam/src/: find_next_variable.py  model_analysis.py  model_list.py  preprocessor.py  splitter.py
src/glam/tests/: test_plots.py
src/glam/types/: __init__.py  glam_plot.py
(+191 files in other folders)
