[project]
name = "glam"
version = "0.1.0"
description = "Generalized Linear/Additive Modeling"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "duckdb>=0.9",
    "polars>=1.0.0",
    "pandas>=2.2.2",
    "plotly>=5.23.0",
    "statsmodels>=0.14.2",
    "scikit-learn>=1.5.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "notebook>=7.2.1",
    "pyarrow>=17.0.0",
    "matplotlib>=3.9.2",
    "scipy>=1.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/glam"]
