[project]
name = "glam"
version = "0.1.4"
description = "Generalized Linear/Additive Modeling"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "duckdb>=0.9",
    "plotly>=5.0.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.2.0",
    "pyarrow>=11.0.0",
    "matplotlib>=3.0.0",
    "scipy>=1.0.0",
    "polars>=1.6.0",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "notebook>=7.2.1",
    "hatchling>=1.25.0",
    "hatch>=1.12.0",
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "coverage>=7.6.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/glam"]
